<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/home_fragment"
        android:title="@string/home"
        android:checked="true"/>
    <item
        android:id="@+id/compass_fragment"
        android:title="@string/compass"/>
    <item
        android:id="@+id/man_over_board_fragment"
        android:title="@string/man_over_board"/>
    <item
        android:id="@+id/marine_tips_fragment"
        android:title="@string/marine_tips"/>
    <item
        android:id="@+id/weather_fragment"
        android:title="@string/weather"/>
    </group>

    <item android:title="@string/nav_support">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_help"/>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/nav_feedback"/>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/nav_about_us"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/nav_settings"/>
        </menu>
    </item>

</menu>