<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.foregroundexampleapp.ui.WeatherFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/no_internet_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/refresh" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@drawable/weather_background"
                android:contentDescription="@string/snowy_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/padding_large"
                android:layout_marginStart="@dimen/padding_large"
                android:layout_marginEnd="@dimen/padding_large">


                <TextView
                    android:id="@+id/date_and_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/demo_date"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_large"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/padding_large">


                    <TextView
                        android:id="@+id/day_maximum_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/day"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_large"/>

                    <TextView
                        android:id="@+id/day_minimum_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/day"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_large"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/padding_large">


                    <TextView
                        android:id="@+id/main_temp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/main_temp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_super_large"/>

                    <ImageView
                        android:id="@+id/weather_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:layout_marginTop="@dimen/padding_large"
                        android:layout_marginEnd="@dimen/padding_large"
                        android:contentDescription="@string/weather_descriptive_image" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/padding_large">

                    <TextView
                        android:id="@+id/feels_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/feels_like"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_large"/>

                    <TextView
                        android:id="@+id/weather_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/weather_type"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_large"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/location_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        app:drawableLeftCompat="@android:drawable/ic_menu_mylocation" />


                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_above="@id/card_view_sunset_sunrise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#122259"
            android:layout_marginLeft="@dimen/padding_x_large"
            android:layout_marginTop="50dp"
            android:layout_marginRight="@dimen/padding_x_large"
            android:layout_marginBottom="2dp"
            android:paddingBottom="@dimen/padding_x_large"
            android:elevation="@dimen/padding_small"
            app:cardCornerRadius="@dimen/padding_large"
            app:cardMaxElevation="@dimen/padding_x_small"
            app:cardElevation="@dimen/padding_x_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#122259"
                android:elevation="@dimen/padding_x_large"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/sunrise_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/sunrise"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_x_large"/>

                    <TextView
                        android:id="@+id/sunset_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/sunset"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_x_large"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/sunrise_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/sunrise_time"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_large"/>

                    <TextView
                        android:id="@+id/sunset_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/sunset_time"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_large"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_sunset_sunrise_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/sunrise_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_sunrise_image"
                        android:contentDescription="@string/sunrise_icon"/>

                    <ImageView
                        android:id="@+id/sunset_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_sunset_image"
                        android:contentDescription="@string/sunset"/>

                </LinearLayout>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/card_view_sunset_sunrise"
            android:layout_marginLeft="@dimen/padding_x_large"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/padding_x_large"
            android:layout_marginBottom="@dimen/padding_large"
            android:paddingBottom="@dimen/padding_x_large"
            android:elevation="@dimen/padding_small"
            app:cardCornerRadius="@dimen/padding_large"
            app:cardMaxElevation="@dimen/padding_x_small"
            app:cardElevation="@dimen/padding_x_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/padding_x_large"
                android:background="#122259"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/pressure"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_large"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/humidity"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_large"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/wind_speed"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_large"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/pressure_icon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_pressure"
                        android:contentDescription="@string/pressure"/>

                    <ImageView
                        android:id="@+id/humidity_icon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_humidity"
                        android:contentDescription="@string/humidity"/>

                    <ImageView
                        android:id="@+id/wind_speed_icon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_wind_speed"
                        android:contentDescription="@string/wind_speed_icon"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pressure_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/pressure_si"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_large"/>

                    <TextView
                        android:id="@+id/humidity_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/humidity_percent"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_large"/>

                    <TextView
                        android:id="@+id/wind_speed_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/wind_speed_kmh"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_large"/>


                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>